tests/parser/valid/arithmetic.src
fn test() -> int {
    int a = 1 + 2;
    int b = 3 - 4;
    int c = 5 * 6;
    int d = 7 / 8;
    int e = 9 % 4;
    int f = -10;
    return a + b - c * d / e;
}
