tests/parser/invalid/unclosed_comment.src
fn test() -> int {
    int x = 5;
    /* Незакрытый комментарий
    return x;
}
